WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133658
Flash video controls hit-test incorrectly after changing topContentInset
https://bugs.webkit.org/show_bug.cgi?id=133658
Summary
Flash video controls hit-test incorrectly after changing topContentInset
Beth Dakin
Reported
2014-06-09 14:56:12 PDT
Flash video controls hit-test incorrectly after changing topContentInset <
rdar://problem/16978590
>
Attachments
Patch
(2.83 KB, patch)
2014-06-09 15:01 PDT
,
Beth Dakin
andersca
: review-
Details
Formatted Diff
Diff
Patch
(2.79 KB, patch)
2014-06-09 15:05 PDT
,
Beth Dakin
andersca
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2014-06-09 15:01:09 PDT
Created
attachment 232735
[details]
Patch
Anders Carlsson
Comment 2
2014-06-09 15:02:25 PDT
Comment on
attachment 232735
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=232735&action=review
> Source/WebKit2/WebProcess/WebPage/WebPage.cpp:2109 > + if (insetDidChange) {
Can use an early return here instead.
Beth Dakin
Comment 3
2014-06-09 15:05:25 PDT
Created
attachment 232736
[details]
Patch
Beth Dakin
Comment 4
2014-06-09 15:31:44 PDT
Thanks Anders!
http://trac.webkit.org/changeset/169724
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug