Flash video controls hit-test incorrectly after changing topContentInset https://bugs.webkit.org/show_bug.cgi?id=133658 -and corresponding- <rdar://problem/16978590>

Reviewed by Anders Carlsson.

When the topContent changes, the PluginView needs to be informed.

New function PluginView::topContentInsetDidChange() calls viewGeometryDidChange().
* WebProcess/Plugins/PluginView.cpp:
(WebKit::PluginView::topContentInsetDidChange):
* WebProcess/Plugins/PluginView.h:

Call topContentInsetDidChange() after setting an inset only if it is a new inset.
* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::setTopContentInset):



Canonical link: https://commits.webkit.org/151635@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169724 268f45cc-cd09-0410-ab3c-d52691b4dbfc